# finance

RuralFinanceIntelligence (2)/RuralFinanceIntelligence/: app.py  market_data_cache.db  market_data_fetcher.py  ml_model_trainer.py  pyproject.toml  replit.md
RuralFinanceIntelligence (2)/RuralFinanceIntelligence/config/: government_schemes.py
RuralFinanceIntelligence (2)/RuralFinanceIntelligence/utils/: data_validation.py  financial_calculations.py
finance/: simple_advisor.py
finance/RuralFinanceIntelligence (2)/RuralFinanceIntelligence/: app.py  enhanced_data_generator.py  recommendation_engine.py
finance/RuralFinanceIntelligence (2)/RuralFinanceIntelligence/config/: __init__.py  investment_products.py
finance/RuralFinanceIntelligence (2)/RuralFinanceIntelligence/utils/: __init__.py
