[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "joblib>=1.5.1",
    "lightgbm>=4.6.0",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "streamlit>=1.47.0",
    "trafilatura>=2.0.0",
    "xgboost>=3.0.2",
    "yfinance>=0.2.65",
]
